Closed
Bug 1262634
Opened 10 years ago
Closed 10 years ago
gtk2 build fails with undefined reference to moz_gtk_get_entry_min_height
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
RESOLVED
FIXED
mozilla48
| Tracking | Status | |
|---|---|---|
| firefox48 | --- | fixed |
People
(Reporter: ht990332, Assigned: wgianopoulos)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
1.22 KB,
patch
|
karlt
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:48.0) Gecko/20100101 Firefox/48.0
Build ID: 20160404125404
Steps to reproduce:
gtk2 build fails with undefined reference to moz_gtk_get_entry_min_height.
I think this causes it https://github.com/mozilla/gecko-dev/commit/a2db24fb140dc6bccf0303bbd7137f558971adaf ?
Updated•10 years ago
|
Component: Untriaged → Widget: Gtk
Product: Firefox → Core
| Reporter | ||
Comment 1•10 years ago
|
||
Setting importance to "Major" since this is a build issue and since gtk2 builds may still be needed while gtk3 integration reaches a usable state.
Severity: normal → major
Updated•10 years ago
|
| Assignee | ||
Updated•10 years ago
|
Assignee: nobody → wgianopoulos
OS: Unspecified → Linux
| Assignee | ||
Comment 2•10 years ago
|
||
This fixes the issue for me.
Attachment #8739257 -
Flags: review?(karlt)
Comment 3•10 years ago
|
||
Comment on attachment 8739257 [details] [diff] [review]
The fix
Thanks, Bill :)
Attachment #8739257 -
Flags: review?(karlt) → review+
| Assignee | ||
Updated•10 years ago
|
Whiteboard: check-in needed
| Assignee | ||
Comment 4•10 years ago
|
||
(In reply to Karl Tomlinson (ni?:karlt) from comment #3)
> Comment on attachment 8739257 [details] [diff] [review]
> The fix
>
> Thanks, Bill :)
Thanks for the quick r+
| Assignee | ||
Updated•10 years ago
|
Keywords: checkin-needed
Comment 6•10 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
status-firefox48:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla48
You need to log in
before you can comment on or make changes to this bug.
Description
•